// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authors render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
        Hello
      </h1>
      <div
        class="engrafo-metadata"
      >
        <div
          class="authors"
        >
          <div
            class="author"
          >
            <span>
              Joe Bloggs
            </span>
          </div>
          <div
            class="author"
          >
            <span>
              Jane Smith
            </span>
          </div>
        </div>
        <div
          class="engrafo-metadata-custom"
        />
      </div>
      




    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`dates are not rendered 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
        Hello
      </h1>
      <div
        class="engrafo-metadata"
      >
        <div
          class="authors"
        />
        <div
          class="engrafo-metadata-custom"
        />
      </div>
      


    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`footnotes in author render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
        Hello
      </h1>
      <div
        class="engrafo-metadata"
      >
        <div
          class="authors"
        >
          <div
            class="author"
          >
            <span>
              Joe Bloggs
              <dt-fn>
                <sup>
                  <span
                    data-hover-ref="dt-fn-hover-box-0"
                    id="fn-1"
                    style="cursor:pointer"
                  >
                    1
                  </span>
                </sup>
              </dt-fn>
            </span>
          </div>
        </div>
        <div
          class="engrafo-metadata-custom"
        />
      </div>
      



    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      >
        <h3>
          Footnotes
        </h3>
        <dt-fn-list>
          <ol>
            <li>
              Equal contribution.
            </li>
          </ol>
        </dt-fn-list>
      </div>
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    >
      <div
        class="dt-hover-box"
        id="dt-fn-hover-box-0"
        style="display:none;"
      >
        Equal contribution.
      </div>
    </div>
  </div>
</body>
`;

exports[`footnotes render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      <h1>
        Untitled
      </h1>
      <div
        class="engrafo-metadata"
      >
        <div
          class="authors"
        />
        <div
          class="engrafo-metadata-custom"
        />
      </div>
      

      <p>
        This is some text.
        <dt-fn>
          <sup>
            <span
              data-hover-ref="dt-fn-hover-box-0"
              id="fn-1"
              style="cursor:pointer"
            >
              1
            </span>
          </sup>
        </dt-fn>
         This is some more text.
        <dt-fn>
          <sup>
            <span
              data-hover-ref="dt-fn-hover-box-1"
              id="fn-2"
              style="cursor:pointer"
            >
              2
            </span>
          </sup>
        </dt-fn>
      </p>
      

    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      >
        <h3>
          Footnotes
        </h3>
        <dt-fn-list>
          <ol>
            <li>
              This is a footnote.
            </li>
            <li>
              And a footnote with a
              <br />
              

              <br />
              
second paragraph! And some 
              <em>
                formatting
              </em>
              .
            </li>
          </ol>
        </dt-fn-list>
      </div>
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    >
      <div
        class="dt-hover-box"
        id="dt-fn-hover-box-0"
        style="display:none;"
      >
        This is a footnote.
      </div>
      <div
        class="dt-hover-box"
        id="dt-fn-hover-box-1"
        style="display:none;"
      >
        And a footnote with a
        <br />
        

        <br />
        
second paragraph! And some 
        <em>
          formatting
        </em>
        .
      </div>
    </div>
  </div>
</body>
`;

exports[`paragraphs and line breaks render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      <h1>
        Untitled
      </h1>
      <div
        class="engrafo-metadata"
      >
        <div
          class="authors"
        />
        <div
          class="engrafo-metadata-custom"
        />
      </div>
      

      <p>
        This is the first paragraph.
      </p>
      

      <p>
        This is the second paragraph.
      </p>
      

      <p>
        This is a centered paragraph.
      </p>
      

      <p>
        This is a
        <br />
        
line break.
      </p>
      

    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`titles and headings render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
        Headings Test
      </h1>
      <div
        class="engrafo-metadata"
      >
        <div
          class="authors"
        />
        <div
          class="engrafo-metadata-custom"
        />
      </div>
      


      <h2
        id="section-1"
      >
        <span
          class="section-number"
        >
          <a
            href="#section-1"
          >
            1
          </a>
        </span>
        Section Title
      </h2>
      

      <h3
        id="section-1.1"
      >
        <span
          class="section-number"
        >
          <a
            href="#section-1.1"
          >
            1.1
          </a>
        </span>
        Subsection Title
      </h3>
      

      <h4
        id="subsubsection-title"
      >
        Subsubsection Title
      </h4>
      


      <p>
        <strong
          class="paragraph-heading"
        >
          Paragraph title
        </strong>
         Hello.
      </p>
      

      <h2
        id="section-2"
      >
        <span
          class="section-number"
        >
          <a
            href="#section-2"
          >
            2
          </a>
        </span>
        Another section
      </h2>
      

      <h2
        class="unnumbered"
        id="section-3"
      >
        Unnumbered section
      </h2>
      

      <h2
        id="section-4"
      >
        <span
          class="section-number"
        >
          <a
            href="#section-4"
          >
            4
          </a>
        </span>
        Another section
      </h2>
      

      <p>
        A reference to 
        <a
          href="#section-1"
        >
          Section 1
        </a>
        .
      </p>
      

    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
